--- a/blog.html
+++ b/blog.html
@@ -1,96 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
+  <!-- MAIN TITLE -->
+  <title>Blog • Hashtag | Trending Hashtags Tips & Updates</title>
 
+  <!-- MAIN SEO -->
+  <meta
+    name="description"
+    content="Read the latest blog posts from Hashtag — get trending hashtags tips, Instagram growth tricks, social media updates and hashtag strategies for reels, posts & shorts."
+  />
+  <meta
+    name="keywords"
+    content="hashtag blog, trending hashtags blog, instagram hashtags tips, hashtag generator blog, social media hashtags guide"
+  />
+  <meta name="author" content="Hashtag" />
 
-    <!-- Google Verification -->
-    <meta
-      name="google-site-verification"
-      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
-    />
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Blog • Hashtag" />
+  <meta
+    property="og:description"
+    content="Hashtag blog: trending hashtags tips, Instagram tricks and social media updates."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/blog.html" />
+  <meta property="og:type" content="article" />
+  <meta property="og:site_name" content="Hashtag" />
 
-    <!-- MAIN TITLE -->
-    <title>
-      R7 Hub Blog | Trending Instagram Reels Hashtags, Viral Growth Tips & Creator Guides
-    </title>
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Blog • Hashtag" />
+  <meta
+    name="twitter:description"
+    content="Read trending hashtag tips and Instagram growth insights from the Hashtag blog."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-    <!-- MAIN SEO -->
-    <meta
-      name="description"
-      content="Read the R7 Hub • Hashtag Ramzan blog for daily trending Instagram reels hashtags, viral content ideas, creator growth tips, caption ideas and hashtag strategies for Indian creators. Learn how to get more reach, views and followers with smart hashtag use."
-    />
-    <meta
-      name="keywords"
-      content="instagram reels blog, hashtag tips, creator growth, viral reels india, R7 Hub blog, hashtag ramzan blog"
-    />
-    <meta name="author" content="Ramzan Ahmad" />
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/blog.html" />
 
-    <!-- OPEN GRAPH -->
-    <meta
-      property="og:title"
-      content="R7 Hub Blog | Trending Reels Hashtags & Creator Growth Tips"
-    />
-    <meta
-      property="og:description"
-      content="Trending Instagram hashtags, reels ideas and growth guides for Indian creators on the R7 Hub blog."
-    />
-    <meta
-      property="og:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-    <meta
-      property="og:url"
-      content="https://hashtagss.netlify.app/blog.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
-
-    <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="R7 Hub Blog | Hashtags & Creator Tips"
-    />
-    <meta
-      name="twitter:description"
-      content="Blog for trending Indian reels hashtags and creator tips by Hashtag Ramzan."
-    />
-    <meta
-      name="twitter:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-
-    <!-- CANONICAL URL -->
-    <link rel="canonical" href="https://hashtagss.netlify.app/blog.html" />
-
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
@@ -400,5 +377,6 @@
     </script>
   </body>
 </html>
+
 
 
