--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
+  <!-- MAIN TITLE -->
+  <title>Contact • Hashtag | Get in Touch With Us</title>
 
+  <!-- MAIN SEO -->
+  <meta
+    name="description"
+    content="Contact Hashtag — reach out for support, feedback, or queries related to the free trending hashtag generator for Instagram, Facebook, Twitter, TikTok & YouTube."
+  />
+  <meta
+    name="keywords"
+    content="contact hashtag, hashtag support, instagram hashtag help, hashtag generator contact"
+  />
+  <meta name="author" content="Hashtag" />
 
-    <!-- Google Verification -->
-    <meta
-      name="google-site-verification"
-      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
-    />
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="Contact • Hashtag" />
+  <meta
+    property="og:description"
+    content="Get in touch with the Hashtag team for support and feedback regarding the trending hashtags generator."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/contact.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Hashtag" />
 
-    <!-- MAIN TITLE -->
-    <title>
-      Contact R7 Hub • Hashtag Ramzan | Support for Instagram Hashtag Generator India
-    </title>
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Contact • Hashtag" />
+  <meta
+    name="twitter:description"
+    content="Need help? Contact Hashtag for support related to trending hashtags and Instagram growth."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-    <!-- MAIN SEO -->
-    <meta
-      name="description"
-      content="Contact R7 Hub • Hashtag Ramzan for support, feedback, business enquiries and collaborations related to the free Instagram hashtag generator for Indian creators. We help you with reels hashtags, tool issues and growth questions."
-    />
-    <meta
-      name="keywords"
-      content="contact R7 Hub, contact Hashtag Ramzan, hashtag generator support, instagram hashtags help, creator support india"
-    />
-    <meta name="author" content="Ramzan Ahmad" />
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/contact.html" />
 
-    <!-- OPEN GRAPH -->
-    <meta property="og:title" content="Contact R7 Hub • Hashtag Ramzan" />
-    <meta
-      property="og:description"
-      content="Get in touch with R7 Hub • Hashtag Ramzan for hashtag generator support and creator help."
-    />
-    <meta
-      property="og:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-    <meta
-      property="og:url"
-      content="https://hashtagss.netlify.app/contact.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
-
-    <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Contact R7 Hub • Hashtag Ramzan"
-    />
-    <meta
-      name="twitter:description"
-      content="Support and enquiries for the free Instagram hashtag generator by Hashtag Ramzan."
-    />
-    <meta
-      name="twitter:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-
-    <!-- CANONICAL URL -->
-    <link rel="canonical" href="https://hashtagss.netlify.app/contact.html" />
-
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
