--- a/faq.html
+++ b/faq.html
@@ -1,95 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3RZEWEMJE9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-3RZEWEMJE9');
+  </script>
 
-  gtag('config', 'G-3RZEWEMJE9');
-</script>
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
+  <!-- MAIN TITLE -->
+  <title>FAQ • Hashtag | Frequently Asked Questions</title>
 
-    <!-- Google Verification -->
-    <meta
-      name="google-site-verification"
-      content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH"
-    />
+  <!-- MAIN SEO -->
+  <meta
+    name="description"
+    content="Find answers to frequently asked questions about the Hashtag free trending hashtag generator for Instagram, Facebook, Twitter, TikTok & YouTube."
+  />
+  <meta
+    name="keywords"
+    content="faq hashtag, questions hashtag generator, instagram hashtags help, hashtag tool faq"
+  />
+  <meta name="author" content="Hashtag" />
 
-    <!-- MAIN TITLE -->
-    <title>
-      FAQ • R7 Hub | Instagram Hashtag Generator Questions & Answers
-    </title>
+  <!-- OPEN GRAPH -->
+  <meta property="og:title" content="FAQ • Hashtag" />
+  <meta
+    property="og:description"
+    content="Frequently asked questions about the Hashtag trending hashtag generator and Instagram growth tips."
+  />
+  <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/faq.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Hashtag" />
 
-    <!-- MAIN SEO -->
-    <meta
-      name="description"
-      content="Frequently asked questions about the R7 Hub • Hashtag Ramzan free Instagram hashtag generator. Learn how to use the tool, how hashtags are generated, how often tags update and how to get better reach on reels and posts as an Indian creator."
-    />
-    <meta
-      name="keywords"
-      content="faq, hashtag generator help, instagram hashtags questions, reels faq, R7 Hub faq, hashtag ramzan support"
-    />
-    <meta name="author" content="Ramzan Ahmad" />
+  <!-- TWITTER CARD -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="FAQ • Hashtag" />
+  <meta
+    name="twitter:description"
+    content="Get answers to the most common questions about hashtags, Instagram growth, and the Hashtag generator tool."
+  />
+  <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-    <!-- OPEN GRAPH -->
-    <meta
-      property="og:title"
-      content="FAQ • R7 Hub | Hashtag Generator Help"
-    />
-    <meta
-      property="og:description"
-      content="Questions and answers about the free R7 Hub Instagram hashtag generator for Indian creators."
-    />
-    <meta
-      property="og:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-    <meta
-      property="og:url"
-      content="https://hashtagss.netlify.app/faq.html"
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="R7 Hub • Hashtag Ramzan" />
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/faq.html" />
 
-    <!-- TWITTER CARD -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="FAQ • R7 Hub | Hashtag Generator Help"
-    />
-    <meta
-      name="twitter:description"
-      content="FAQ page for R7 Hub • Hashtag Ramzan hashtag generator."
-    />
-    <meta
-      name="twitter:image"
-      content="https://hashtagss.netlify.app/ramzan_ahmad.jpeg"
-    />
-
-    <!-- CANONICAL URL -->
-    <link rel="canonical" href="https://hashtagss.netlify.app/faq.html" />
-
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              ramzan: "#22c55e",
-              r7dark: "#020617",
-            },
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            ramzan: "#22c55e",
+            r7dark: "#020617",
           },
         },
-      };
-    </script>
-  </head>
+      },
+    };
+  </script>
+</head>
+
 
   <body class="bg-r7dark text-slate-100">
     <!-- NAVBAR (COMMON) -->
@@ -321,5 +300,6 @@
     </script>
   </body>
 </html>
+
 
 
