--- a/terms.html
+++ b/terms.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -17,43 +17,41 @@
   <meta name="google-site-verification" content="2FbSr0CSLA0pQx-XIxp5d1C9IttCIJQ0m-LAWbhybDvH" />
 
   <!-- MAIN TITLE -->
-  <title>Hashtag • Free Hashtags Generator for Instagram, Facebook, Twitter & TikTok</title>
+  <title>Terms & Conditions • Hashtag | Free Hashtag Generator India</title>
 
   <!-- MAIN SEO -->
   <meta
     name="description"
-    content="Hashtag – Free trending hashtags generator for Instagram, Facebook, Twitter, YouTube & TikTok. Generate viral hashtags for reels, posts, shorts and stories instantly."
+    content="Read the Terms & Conditions for using Hashtag — a free trending hashtag generator for Instagram, Facebook, Twitter, TikTok & YouTube. Learn usage rules, limitations and legal guidelines."
   />
-
   <meta
     name="keywords"
-    content="hashtags, free hashtag generator, instagram hashtags, facebook hashtags, twitter hashtags, tiktok hashtags, trending hashtags, reels hashtags"
+    content="terms hashtag, hashtag terms, hashtag generator terms and conditions"
   />
-
   <meta name="author" content="Hashtag" />
 
   <!-- OPEN GRAPH -->
-  <meta property="og:title" content="Hashtag • Free Trending Hashtag Generator" />
+  <meta property="og:title" content="Terms & Conditions • Hashtag" />
   <meta
     property="og:description"
-    content="Create trending hashtags for Instagram, Facebook, Twitter & TikTok with the free Hashtag generator tool."
+    content="Terms & Conditions for using the free Hashtag trending hashtag generator tool."
   />
   <meta property="og:image" content="https://hashtagss.netlify.app/logo.jpeg" />
-  <meta property="og:url" content="https://hashtagss.netlify.app/" />
+  <meta property="og:url" content="https://hashtagss.netlify.app/terms.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Hashtag" />
 
-  <!-- TWITTER -->
+  <!-- TWITTER CARD -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Hashtag • Free Hashtags Generator" />
+  <meta name="twitter:title" content="Terms & Conditions • Hashtag" />
   <meta
     name="twitter:description"
-    content="Free trending hashtags generator for reels, stories, shorts & posts."
+    content="Official terms and conditions for using the Hashtag free trending hashtags generator."
   />
   <meta name="twitter:image" content="https://hashtagss.netlify.app/logo.jpeg" />
 
-  <!-- CANONICAL -->
-  <link rel="canonical" href="https://hashtagss.netlify.app/" />
+  <!-- CANONICAL URL -->
+  <link rel="canonical" href="https://hashtagss.netlify.app/terms.html" />
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -311,6 +309,7 @@
     </script>
   </body>
 </html>
+
 
 
 
